# Pinata

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  arm-gcc-link.ld  gcc-arm-none-eabi.toolchain.cmake  macos-gcc-arm-none-eabi.toolchain.cmake
.github/workflows/: ci.yml
PinataTests/: .clang-format  .gitignore  CMakeLists.txt  ClassicFirmware.cpp  Environment.cpp  Environment.hpp  HardwareFirmware.cpp  PqcFirmware.cpp  README.md  TestBase.hpp  common.cpp  common.hpp  main.cpp
PinataTests/dilithium/: test-dilithium.cpp  test-dilithium.hpp
PinataTests/kyber/: test-kyber.cpp  test-kyber.hpp
PinataTests/tests/: Environment.cpp  Environment.hpp  PinataTests.cpp
PinataTests/utilities/: common.cpp  common.hpp
patches/: mldsa-sign.patch
src/: CMakeLists.txt  debug.h  dilithium.inc  io.h  main.c  main.h  mldsa.inc  rng.c  rng.h  support.h  tickers.c  tickers.h
src/bignum/: CMakeLists.txt  bigdigits.c  bigdigits.h
src/cmsis_boot/: system_stm32f4xx.c  system_stm32f4xx.c.25MHzExternalClock
src/cmsis_boot/startup/: startup_stm32f4xx.c
src/cmsis_lib/include/: stm32f4xx_gpio.h  stm32f4xx_hash.h
src/cmsis_lib/source/: stm32f4xx_cryp_aes.c  stm32f4xx_cryp_des.c  stm32f4xx_cryp_tdes.c  stm32f4xx_gpio.c  stm32f4xx_hash_sha1.c  stm32f4xx_usart.c
src/curve25519_CortexM/: CMakeLists.txt  scalarmult.c
src/curve25519_CortexM/asm/: cortex_m0_mpy121666.s
src/curve25519_CortexM/include/: api.h
src/dilithium/: CMakeLists.txt  README.md  sign.c  wrapper.c  wrapper.h
src/ecc/: CMakeLists.txt  ecc.c  ecc.h
src/kyber512/: CMakeLists.txt  randombytes.h  wrapper.c  wrapper.h
src/ml-dsa/: README.md  config.h  ntt.S  ntt.h  packing.c  packing.h  params.h  pointwise_mont.h  pointwise_mont.s  poly.c  poly.h  polyvec.c  polyvec.h  reduce.h  rounding.h  sign.c  sign.h  smallpoly.c  smallpoly.h  symmetric-shake.c  symmetric.h  vector.h  vector.s  wrapper.c  wrapper.h
src/mldsa/: CMakeLists.txt  wrapper.c  wrapper.h
src/mlkem/: wrapper.c  wrapper.h
src/pqm4_hal/: pinata_callbacks.c  pinata_callbacks.h  randombytes.c  randombytes.h
src/pqm4common/: CMakeLists.txt
src/present/: CMakeLists.txt  present.c  present.h
src/prng/: CMakeLists.txt  prng.c  prng.h
src/rsa/: CMakeLists.txt  rsa.c  rsa.h
src/rsacrt/: CMakeLists.txt  rsacrt.c  rsacrt.h
src/sm4/: CMakeLists.txt  sm4.c  sm4.h  sm4OpenSSL.c
src/ssd1306/: ssd1306.c  ssd1306.h
src/swAES/: CMakeLists.txt  aes.c  aes.h
src/swAES256/: CMakeLists.txt  aes256.c
src/swAES_Ttables/: CMakeLists.txt  rijndael.c
src/swDES/: CMakeLists.txt  des.c  des.h
src/swmAES/: CMakeLists.txt  maes.c  maes.h
src/syscalls/: syscalls.c
src/tea/: CMakeLists.txt  tea.c  tea.h
src/usb_lib/cdc/: usbd_cdc_vcp.c
src/usb_lib/otg/: usb_core.c
src/utils/: nop_block.h
